--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
-    "react-router": "^6.2.0",
-    "react-router-dom": "^6.2.0",
+    "react-router": "^6.1.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "predeploy": "npm run build",
